css/widgets.css
.overlay {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color:rgba(0,0,0,0.3);
	z-index: 500;
}
.dialog {
	overflow: hidden;
	position: absolute;
	top: 0;
	left: 0;
	outline: 0;
	/*display: none;*/
	border-radius: 6pt;
	box-shadow: 0 0 12pt 0 rgba(0, 0, 0, 0.4);
	z-index: 501;
}
#setupDialog {
	background-color: #333;
	color: #eee;
	border: 1px solid #222;
}
.dialog-content {
	position: relative;
	border: 0;
	padding: 6pt 12pt;
	background: none;
	overflow: auto;
	line-height: 24pt;
	font-size: 16pt;
	/*height: 100pt;*/

}
.dialog .dialog-header {
	float: left;
	white-space: nowrap;
	width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	border-bottom: 1px solid #666;

	font-size: 16pt;
	line-height: 24pt;
	padding: 6pt 12pt;
}
.dialog .close {
	position: absolute;
	top: 0;
	right: 0;

	margin-top: 6pt;
	margin-right: 6pt;
	width: 24pt;
	height: 24pt;

	fill: #CCC;
	border: none;
	background: transparent;
}
.dialog .close:hover {
	background-color: #cc3300;
}
svg.icon {
	width: 100%;
	height: 100%;
}
.dialog .button {
	background-color: #666;
	border-radius: 6pt;
	padding: 6pt 12pt;
	color: #fff;
	text-align: center;
	box-sizing: border-box;
	cursor: pointer;
	font-size: 20pt;
	display: inline-block;
}
.dialog label {
	float: left;
	height: 24pt;
	line-height: 24pt;
	font-size: 15pt;
	margin-right: 6pt;
}
#gameInfo {
	text-align: center;
	font-size: .6em;
	line-height: 24pt;
	margin-left: 1em;
}
.clearfix {
	content: "";
	display: table;
	border-collapse: collapse;
	clear: both;
}
.dialog .check {
	width: 22pt;
	height: 22pt;
	border: 1px solid #666;
	border-radius: 3px;
	background-color: #555;
	float: left;
}
.check-off {
	fill: #666;
}
.check-on {
	fill: #0c0;
}
.error {
	position: absolute;
	box-sizing: border-box;
	height: 60pt;
	padding: 6pt;
	margin-top: -18pt;
	width: 80%;
	margin-left: 10%;
	left: 0;
	top: 50%;
	border-radius: 18pt;
	background-color: #cc3300;
	color: white;
	font-weight: bold;
	font-family: sans-serif;
	text-align: center;
	line-height: 48pt;
	font-size: 36pt;
	z-index: 501;
}
.overlay .error {
	opacity: 1;
}

.tooltip {
	font-family: 'Roboto Condensed', sans-serif;
	position: absolute;
  	/*width: 100pt;*/
  	color: #222;
  	background: #000;
  	height: 30pt;
	line-height: 30pt;
	text-align: center;
	border-radius: 6pt;
	font-size: 16pt;
	visibility: hidden;
	box-sizing: border-box;
	margin-left: -12pt;
	padding-left: 8pt;
	padding-right: 8pt;
	color: #eee;
}
.tooltip-success {
	color: #baed91;
}

.tooltip-error {
	color: #fea3aa;
}
.tooltip:after {
  	content: '';
	position: absolute;
	left: 100%;
	top: 50%;
	margin-top: -6pt;
	width: 0;
	height: 0;
	border-top: 6pt solid transparent;
	border-bottom: 6pt solid transparent;
	border-left: 12pt solid #000;
	border-right: 12pt solid transparent;
}
.instruction {
	box-sizing: border-box;
	position: absolute;
	height: 36pt;
	padding: 6pt;
	line-height: 24pt;
	font-size: 16pt;
	text-align: center;
	top: 50%;
	margin-top: -18pt;
	width: 60%;
	margin-left: 20%;
	margin-right: 20%;
	border-radius: 12pt;
}
.instruction.error {
	background-color: rgba(153, 51, 51, 1);
	color: #EEE;
}
.instruction.normal {
	background-color: rgba(0, 0, 0, 1);
	color: #EEE;
}
.instruction.green {
	background-color: #baed91;
	color: #000;
}
/*
 * Timer
 */
.game-timer {
	position: absolute;
	border-radius: 18pt;
	height: 36pt;
	padding: 3pt 18pt;
	color: #fff;
	background-color: #CCC;
	font-family: sans-serif;
	font-size: 20pt;
	line-height: 30pt;
	font-weight: bold;
	box-sizing: border-box;
	width: 8em;
	top: 0;
	left: 50%;
	margin-left: -4em;
	z-index: 101;
	text-align: center;
	text-shadow: 0 0.1em rgba(0, 0, 0, 0.2);
	cursor: pointer;
}

@keyframes zoom {
	0% {
	}
	10% {
		top: 50%;
		margin-top: -18pt;
		width: 16em;
		margin-left: -8em;
	}
	90% {
		top: 50%;
		margin-top: -18pt;
		width: 16em;
		margin-left: -8em;
	}
	100% {
	}
}
#topResults {
	background-color: #333;
	color: #eee;
	border: 1px solid #222;
	min-width: 30em;
	height: 360pt;
}
#topResults ol {
	margin: 0;
	padding-top: 0;
	padding-bottom: 0;
}
#topResults ol li {
	font-size: 16pt;
	line-height: 24pt;
	margin: 0;
	padding: 0;
	color: #ddd;
}
#topResults .date {
	float: right;
	width: 50%;
	text-align: left;
}
#topResults li.current {
	color: #ffa837;
	font-weight: bold;
}

